--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>pxtone collab: collaborative music editor</title>
-  <meta name="description" content="pxtone collab: ">
+  <title>pxtone collab: multiplayer music editor</title>
+  <meta name="description" content="pxtone collab is a music editor where you can collaborate with friends!">
   <meta name="keywords" content="pxtone, ptcop, pttune, music, editor, collaborative, multiplayer, daw, chiptune, music, chipmusic">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
