min-width for mobile

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
   <header>
     <div class="wrapper">
-      <img src="./logo.png" alt="pxtone collab" style="display:block;margin:auto" />
-      <img src="./multiplayer-music-editor.png" alt="multiplayer-music-editor" style="display:block;margin:auto" />
+      <img src="./logo.png" alt="pxtone collab" style="display:block;margin:auto; min-width:256px; max-width:100%" />
+      <img src="./multiplayer-music-editor.png" alt="multiplayer-music-editor" style="display:block;margin:auto;max-width:100%; min-width:192px" />
       <!--<div style="text-align:center">multiplayer music editor</div>-->
     </div>
   </header>
