new session dialog

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       collaborate with friends! It uses the same instrument and project file
       formats as pxtone, a sample-based music editor developed by Pixel, the
       creator of Cave Story and Kero Blaster.</p>
+      <!-- TODO: Update this. piano-roll-based? sample-based? -->
     </section>
 
     <section>
@@ -126,5 +127,7 @@
       </div>
     </section>
   </div>
+
+  <!-- TODO: Add thanks and links. Perhaps have the details in a separate section. -->
 </body>
 </html>
