update screenshot and video

--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -22,9 +22,8 @@
 
     <div class="wrapper">
       <!-- <img src="./screenshot.png" alt="screenshot" style="width:100%" /> -->
-
       <div style="position:relative; width:100%; padding-bottom: 56.25%">
-        <iframe style="position:absolute; top:0; left:0; width:100%; height:100%" src="https://www.youtube.com/embed/MqW87yrzHv8" frameborder="0" allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+        <iframe style="position:absolute; top:0; left:0; width:100%; height:100%" src="https://www.youtube.com/embed/PVsZLjwDI5Y" frameborder="0" allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen></iframe>
       </div>
 
       <section>
