links, better style

--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -15,8 +15,10 @@
   <body>
     <header>
       <div class="wrapper">
-        <img src="./resources/logo.png" alt="pxtone collab" style="display:block;margin:auto; min-width:256px; max-width:100%" />
-        <img src="./resources/multiplayer-music-editor.png" alt="multiplayer-music-editor" style="display:block;margin:auto;max-width:100%; min-width:192px" />
+        <div style="padding:10px 20px">
+        <img src="./resources/logo.png" alt="pxtone collab" style="display:block;margin:auto; max-width:100%" />
+        <img src="./resources/multiplayer-music-editor.png" alt="multiplayer-music-editor" style="display:block;margin:auto;max-width:100%;" />
+        </div>
       </div>
     </header>
 
@@ -146,6 +148,24 @@
             </li>
           </ul>
         </div>
+      </section>
+
+      <section>
+        <h3>Links</h3>
+        <ul>
+          <li><a href="https://pxtone.org/">The official pxtone website</a></li>
+          <li><a href="https://www.ptweb.me/">pxtone web</a>, a fan site for posting pxtone music</li>
+          <li><a href="http://pxtone.haru.gs/">The Pxtone Collage Collective</a>, an archive of pxtone songs and a library for many <a href="http://pxtone.haru.gs/english/support.html">free instrument libraries</a></li>
+        </ul>
+      </section>
+
+      <section>
+        <h3>Thanks</h3>
+        <ul>
+          <li><a href="https://pxtone.org/">The official pxtone website</a></li>
+          <li><a href="https://www.ptweb.me/">pxtone web</a>, a fan site for posting pxtone music</li>
+          <li><a href="http://pxtone.haru.gs/">The Pxtone Collage Collective</a>, an archive of pxtone songs and a library for many <a href="http://pxtone.haru.gs/english/support.html">free instrument libraries</a></li>
+        </ul>
       </section>
     </div>
 
