--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -80,7 +80,8 @@
         <div class="text">
           <p>For other operating systems, there are build instructions in the
           <a href="https://github.com/yuxshao/ptcollab">source repo</a>, which
-          also has changelogs and more information.</p>
+          also has changelogs and more information. Please feel free to post on
+          the github with any questions or suggestions!</p>
         </div>
       </section>
 
@@ -161,14 +162,20 @@
 
       <section>
         <h3>Thanks</h3>
-        <ul>
-          <li><a href="https://pxtone.org/">The official pxtone website</a></li>
-          <li><a href="https://www.ptweb.me/">pxtone web</a>, a fan site for posting pxtone music</li>
-          <li><a href="http://pxtone.haru.gs/">The Pxtone Collage Collective</a>, an archive of pxtone songs and a library for many <a href="http://pxtone.haru.gs/english/support.html">free instrument libraries</a></li>
-        </ul>
+        <div class="text">
+          <p>Huge thanks to everyone who helped support this! pxtone collage is a wonderful music tool and this is I hope is seen as a kind of tribute to the artist community that's flourished around it. Here's a tentative running thank-you list - please let me know if I forgot anyone:</p>
+          <ul>
+            <li>Pixel for making such an awesome music software!</li>
+            <li>Testers (jaxcheese, neozoid, steedfarmer, ewangreen, gkpotter, arcofdream, jade, others I've probably missed), for making tunes together, and giving great feedback!</li>
+            <li>steedfarmer for helping me hunt down this nasty networking bug!</li>
+            <li>arcofdream for helping conceptualize the UI, giving valuable feedback, and promoting this!</li>
+            <li>arcofdream, nanoplink, easynam for general programming, UX discussion and consulting!</li>
+            <li>gkpotter and arcofdream for helping getting this ready for release!</li>
+            <li>steedfarmer for figuring out the mac build, and gkpotter for providing the deployment!</li>
+            <li>Everyone on ptweb and the discord servers for making such great tunes!</li>
+          </ul>
+        </div>
       </section>
     </div>
-
-    <!-- TODO: Add thanks and links. Perhaps have the details in a separate section. -->
   </body>
 </html>
