update gh pages

--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -70,12 +70,12 @@
             </a>
           </div>
           <div>
-            <a href="https://github.com/yuxshao/ptcollab/releases/latest/download/ptcollab-mac.zip">
+            <a href="https://github.com/yuxshao/ptcollab/releases/latest/download/ptcollab-mac.tar.gz">
               <img src="./resources/mac.svg" alt="Mac">
             </a>
           </div>
           <div>
-            <a href="https://github.com/yuxshao/ptcollab/releases/latest/download/ptcollab-lin.zip">
+            <a href="https://github.com/yuxshao/ptcollab/releases/latest/download/ptcollab-lin.tar.gz">
               <img src="./resources/linux.svg" alt="Linux">
             </a>
           </div>
