--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="./resources/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./resources/favicon.ico">
   </head>
 
   <body>
