--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -86,7 +86,7 @@
           <a href="https://github.com/yuxshao/ptcollab">source repo</a>, which
           also has changelogs and more information.</p>
 	  <p>If you have any questions, comments, or suggestions, please feel
-free to comment there or contact me <a href="mailto:yuxshaos[replace-this-with-an-at-sign]gmail.com">directly</a>!</p>
+      free to comment there or contact me <a href="mailto:yuxshaos[replace-this-with-an-at-sign]gmail.com">via email</a> or in Discord (server link below).</p>
         </div>
       </section>
 
@@ -163,6 +163,7 @@ free to comment there or contact me <a href="mailto:yuxshaos[replace-this-with-a
           <li><a href="https://www.ptweb.me/">pxtone web</a>, a fan site for posting pxtone music</li>
           <li><a href="http://pxtone.haru.gs/">The Pxtone Collage Collective</a>, an archive of pxtone songs and a library for many <a href="http://pxtone.haru.gs/english/support.html">free instrument libraries</a></li>
           <li><a href="http://www.strandedsoft.com/tutorial-getting-started-with-pxtone/">Tutorial: Getting started with PxTone</a> is also pretty applicable here (the section on the tabs especially).</li>
+          <li><a href="https://discord.gg/2uQjHu8">English Discord Server</a></li>
         </ul>
       </section>
 
