--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -17,8 +17,10 @@
     <header>
       <div class="wrapper">
         <div style="padding:10px 20px">
-        <img src="./resources/logo.png" alt="pxtone collab" style="display:block;margin:auto; max-width:100%" />
-        <img src="./resources/multiplayer-music-editor.png" alt="multiplayer-music-editor" style="display:block;margin:auto;max-width:100%;" />
+          <a href="./index.html">
+            <img src="./resources/logo.png" alt="pxtone collab" style="display:block;margin:auto; max-width:100%" />
+            <img src="./resources/multiplayer-music-editor.png" alt="multiplayer-music-editor" style="display:block;margin:auto;max-width:100%;" />
+          </a>
         </div>
       </div>
     </header>
@@ -82,82 +84,14 @@
           </div>
         </div>
         <div class="text">
-          <p>For other operating systems, there are build instructions in the
-          <a href="https://github.com/yuxshao/ptcollab">source repo</a>, which
-          also has changelogs and more information.</p>
-	  <p>If you have any questions, comments, or suggestions, please feel
-      free to comment there or contact me <a href="mailto:yuxshaos[replace-this-with-an-at-sign]gmail.com">via email</a> or in Discord (server link below).</p>
+          <p>Check out <a href="./guide.html">this page</a> for a very very brief guide on how to use this software!</p>
+          <p>For other operating systems, there are build instructions in the <a href="https://github.com/yuxshao/ptcollab">source repo</a>.</p>
+          <p>If you have any questions, comments, or suggestions, please feel free to contact me there, <a href="mailto:yuxshaos[replace-this-with-an-at-sign]gmail.com">by email</a>, in Discord (server link below), or on <a href="https://twitter.com/sidedishf">Twitter</a>!</p>
         </div>
       </section>
 
       <section>
-        <h3>Workflow</h3>
-        <div class="text">
-          <p>The basic workflow is similar to pxtone collage's:</p>
-          <ul>
-            <li>Start a session</li>
-            <li>Load a number of <i>voices</i> (instruments&mdash;ogg/wav samples, or ptvoice/ptnoise)</li>
-            <li>Create a number of <i>units</i> (lines that can play a single sound at a time) assigned to voices. </li>
-            <li>In the piano roll, input and delete notes with left and right-click.</li>
-          </ul>
-          <p>The primary difference is that you can also host or connect to a
-          public session.</p>
-
-          <p>In addition to the piano roll, you can configure other song parameters:</p>
-          <ul>
-            <li>Loop points, via the measure ribbon above the piano roll</li>
-            <li>Automation for each unit, including pan, tuning, voice, volume, portamento
-              via the bar below the piano roll</li>
-            <li>Tempo and time signature, via the Song tab</li>
-            <li>Echo and overdrive effects you can apply to groups of units, via the
-              Song tab</li>
-          </ul>
-        </div>
-
-        <h3>Shortcuts</h3>
-        <div class="text">
-          <p>Once you're familiar with the basic workflow, there are a bunch of
-          shortcuts to make certain actions easier:</p>
-          <ul>
-            <li>Space to play/pause, Escape to stop, Shift+click to seek</li>
-            <li>Ctrl+Z and Ctrl+Y/Ctrl+Shift+Z to undo and redo</li>
-            <li>Ctrl+click to modify just pitch values, not notes (useful for portamento)</li>
-            <li>Selection
-              <ul>
-                <li>Ctrl+shift+click to select</li>
-                <li>Ctrl+A to select all</li>
-                <li>Ctrl+shift+rclick or Ctrl+D to deselect</li>
-              </ul>
-            </li>
-            <li>While something is selected:
-              <ul>
-                <li>(shift) up / down to transpose or shift
-                  parameters. Add Ctrl to shift by an octave.</li>
-                <li>Ctrl+C and Ctrl+V to copy/paste</li>
-              </ul>
-            </li>
-            <li>Keyboard shortcuts for navigation:
-              <ul>
-                <li>W/S for next previous / next unit (PgUp / PgDn also work)</li>
-                <li>Q/A for previous / next parameter</li>
-                <li>F1..F4 for the tabs in the menu</li>
-                <li>1..9 for jumping to a unit directly</li>
-              </ul>
-            </li>
-            <li>Mouse-related shortcuts for view / mode changes
-              <ul>
-                <li>Middle-click drag to move around</li>
-                <li>Shift+wheel to scroll horizontally</li>
-                <li>Ctrl+(shift)+wheel to zoom vertically (horizontally)</li>
-                <li>Alt+wheel to change quantization</li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <section>
-        <h3>Links</h3>
+        <h3>Resources</h3>
         <ul>
           <li><a href="https://pxtone.org/">The official pxtone website</a></li>
           <li><a href="https://www.ptweb.me/">pxtone web</a>, a fan site for posting pxtone music</li>
