--- a/gh-pages/guide.html
+++ b/gh-pages/guide.html
@@ -34,7 +34,7 @@
           <p>With the instruments loaded, you can <a href="./resources/create-units.png">create units</a> for each instrument by going to the "Units" tab and pressing the "+" button. Each unit can play one instrument at a time.</p>
           <p>Once you have your units, you can start <a href="./resources/piano-roll.png">putting notes down</a> with left and right-click in the piano roll!</p>
         </div>
-        <p class="text">This is a super quick and dirty intro. There are plenty more and better guides for pxtone <i>collage</i> out there on the internet. This software is based off that and has a similar UI.</p>
+        <p class="text">This is a super quick and dirty intro. There are plenty more and better guides for pxtone <i>collage</i> out there on the internet, like <a href="http://www.strandedsoft.com/tutorial-getting-started-with-pxtone/">this one</a>! This software is based off that and has a similar UI.</p>
       </section>
     </div>
 
