--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -84,7 +84,7 @@
           </div>
         </div>
         <div class="text">
-          <p>Check out <a href="./guide.html">this page</a> for a very very brief guide on how to use this software!</p>
+          <p>Check out <a href="./guide.html">this page</a> for a brief guide on getting started and setting up collaboration!</p>
           <p>For other operating systems, there are build instructions in the <a href="https://github.com/yuxshao/ptcollab">source repo</a>.</p>
           <p>If you have any questions, comments, or suggestions, please feel free to contact me there, <a href="mailto:yuxshaos[replace-this-with-an-at-sign]gmail.com">by email</a>, in Discord (server link below), or on <a href="https://twitter.com/sidedishf">Twitter</a>!</p>
         </div>
