--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -83,9 +83,10 @@
             </a>
           </div>
         </div>
+        <p class="text">For other operating systems, there are build instructions in the <a href="https://github.com/yuxshao/ptcollab">source repo</a>.</p>
+        <h3>Guides & Help</h3>
         <div class="text">
-          <p>Check out <a href="./guide.html">this page</a> for a brief guide on getting started and setting up collaboration!</p>
-          <p>For other operating systems, there are build instructions in the <a href="https://github.com/yuxshao/ptcollab">source repo</a>.</p>
+          <p>Here's a <a href="./guide.html">guide</a> for getting started, hosting a server, and various other common actions.</p>
           <p>If you have any questions, comments, or suggestions, please feel free to contact me there, <a href="mailto:yuxshaos[replace-this-with-an-at-sign]gmail.com">by email</a>, in Discord (server link below), or on <a href="https://twitter.com/sidedishf">Twitter</a>!</p>
         </div>
       </section>
@@ -96,7 +97,6 @@
           <li><a href="https://pxtone.org/">The official pxtone website</a></li>
           <li><a href="https://www.ptweb.me/">pxtone web</a>, a fan site for posting pxtone music</li>
           <li><a href="http://pxtone.haru.gs/">The Pxtone Collage Collective</a>, an archive of pxtone songs and a library for many <a href="http://pxtone.haru.gs/english/support.html">free instrument libraries</a></li>
-          <li><a href="http://www.strandedsoft.com/tutorial-getting-started-with-pxtone/">Tutorial: Getting started with PxTone</a> is also pretty applicable here (the section on the tabs especially).</li>
           <li><a href="https://discord.gg/2uQjHu8">English Discord Server</a></li>
         </ul>
       </section>
