--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -114,6 +114,8 @@
             <li>arcofdream, nanoplink, easynam for general programming, UX discussion and consulting!</li>
             <li>gkpotter and arcofdream for helping getting this ready for release!</li>
             <li>steedfarmer for figuring out the mac build, and gkpotter for providing the deployment!</li>
+            <li>crummybowl for testing & suggesting improvements (preview with all units)</li>
+            <li>OPNA2608 for helping with packaging and getting this to build properly!</li>
             <li>Everyone on ptweb and the discord servers for making such great tunes!</li>
           </ul>
         </div>
