--- a/gh-pages/guide.html
+++ b/gh-pages/guide.html
@@ -186,7 +186,7 @@
               <li>Local playback volume (doesn’t affect song).</li>
               <li>Playback buffer length. If your audio is choppy, try raising this. It will add some audio latency though.</li>
               <li>The parameter you’re currently editing.</li>
-              <li>Quantization for your current note (e.g., if Snap X is ⅓, you can place notes ⅓ of a beat long). Snap lets you do microtonal placements.</li>
+              <li>Quantization for your current note (e.g., if Snap X is 1/3, you can place notes 1/3 of a beat long). Snap lets you do microtonal placements.</li>
               <li>When copying and pasting, this determines if you want to include the current parameter in the copy. Note: velocity controls whether or not the notes themselves are copied.</li>
               <li>Follow playhead. Toggle this to automatically scroll if the playhead falls offscreen.</li>
             </ol>
@@ -237,7 +237,7 @@
 
         <a class="h3" href="#" onclick="toggle('how-porta');return false">Portamento / vibrato?</a>
         <div id="how-porta" style="display:none">
-          <p class="text">Copy and paste?</p>
+          <p class="text">Set the portamento length in the parameter editor. Then draw a note somewhere afterwards.</p>
           <img src="resources/porta-set-porta.png" class="screenshot" alt="setting portamento" />
           <p class="text">Ctrl+click somewhere in the middle of the note. This changes the pitch of the note without creating a new note.</p>
           <div style="text-align:center"><img class="screenshot" style="display:inline-block" src="resources/porta-correct.png" alt="correct porta" />
