--- a/gh-pages/guide.html
+++ b/gh-pages/guide.html
@@ -39,6 +39,11 @@
 
     <div class="wrapper">
       <section>
+        <h2>Documentation</h2>
+        <p class="text">Welcome to the documentation for ptcollab! Below you'll find some guides about how to use the software, as well as a list of features and tour of the UI. Click on a heading to expand it.</p>
+      </section>
+
+      <section>
         <h2>For people new to pxtone</h2>
         <hr />
         <a class="h3" href="#" onclick="toggle('pxtone-background');return false">Background on pxtone</a>
