--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -86,7 +86,7 @@
         <p class="text">For other operating systems, there are build instructions in the <a href="https://github.com/yuxshao/ptcollab">source repo</a>.</p>
         <h3>Guides & Help</h3>
         <div class="text">
-          <p>Here's a <a href="./guide.html">guide</a> for getting started, hosting a server, and various other common actions.</p>
+          <p>See <a href="./guide.html">here</a> for documentation, including guides for getting started, hosting a server, and various other common actions.</p>
           <p>If you have any questions, comments, or suggestions, please feel free to contact me there, <a href="mailto:yuxshaos[replace-this-with-an-at-sign]gmail.com">by email</a>, in Discord (server link below), or on <a href="https://twitter.com/sidedishf">Twitter</a>!</p>
         </div>
       </section>
