update gh pages

--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -87,7 +87,7 @@
         <h3>Guides & Help</h3>
         <div class="text">
           <p>See <a href="./guide.html">here</a> for documentation, including guides for getting started, hosting a server, and various other common actions.</p>
-          <p>If you have any questions, comments, or suggestions, please feel free to contact me there, <a href="mailto:yuxshaos[replace-this-with-an-at-sign]gmail.com">by email</a>, in Discord (server link below), or on <a href="https://twitter.com/sidedishf">Twitter</a>!</p>
+          <p>If you have any questions, comments, or suggestions, please feel free to contact me there, <a href="mailto:yuxshaos[replace-this-with-an-at-sign]gmail.com">by email</a>, or in Discord (server link below).</p>
         </div>
       </section>
 
