update gh pages

--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -84,7 +84,7 @@
             </a>
           </div>
         </div>
-        <p class="text">For other operating systems, there are build instructions in the <a href="https://github.com/yuxshao/ptcollab">source repo</a>. You can also find older releases <a href="https://github.com/yuxshao/ptcollab/releases">here</a>!.</p>
+        <p class="text">For other operating systems, there are build instructions in the <a href="https://github.com/yuxshao/ptcollab">source repo</a>. You can also find older releases <a href="https://github.com/yuxshao/ptcollab/releases">here</a>!</p>
         <h3>Guides & Help</h3>
         <div class="text">
           <p>See <a href="./guide.html">here</a> for documentation, including guides for getting started, hosting a server, and various other common actions.</p>
