Ehm tutorial porta video

--- a/gh-pages/guide.html
+++ b/gh-pages/guide.html
@@ -253,6 +253,9 @@
           <p class="text">
           The note will slide smoothly from one pitch to the next over the portamento length you set earlier.
           </p>
+          <p class="text">
+            <em>Update!</em> Ehm has made a helpful <a href="https://www.youtube.com/watch?v=1U8iuby7cCQ">video</a> about how portamento works. It's for ptcollage, so the UI is slightly different, but the principles are the same. One difference is that Ctrl+click is how you use the finger tool in ptcollab, instead of pressing a specific button.
+          </p>
         </div>
 
         <a class="h3" href="#" onclick="toggle('how-midi');return false">Use MIDI input?</a>
