update beat fit note

--- a/gh-pages/guide.html
+++ b/gh-pages/guide.html
@@ -138,7 +138,7 @@
           <div class="text">
             <ol>
               <li>Repeat sample. For wav and ogg voices, you can toggle this to have the sample stop after one loop, or repeat as long as the note is held.</li>
-              <li>Beat fit. For wav and ogg voices, you can toggle this so that the sample always plays for 1 whole beat on note A4. This is useful for certain percussion sounds if you want to fix their start and end times.</li>
+              <li>Beat fit. For wav and ogg voices, you can toggle this so that on A4, the sample always plays for 1 whole beat. This is useful for certain percussion sounds if you want to fix their start and end times. For example, you wanted something to sound for 4 beats exactly, you could put it 2 octaves below A4. </li>
               <li>Base key. If beat fit isn’t checked, change this to transpose this voice by a number of semitones. It’s inverted, so lower it if you want everything to sound higher. Double-click to edit.</li>
               <li>Name. The name of the voice. Double-click to edit.</li>
             </ol>
