shorten index page

--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -62,10 +62,8 @@
       <section>
         <h3>Install</h3>
         <div class="text">
-          <p>The latest version is available just below! It includes an
-          instrument starter pack and a few sample songs. If you haven't used
-          pxtone before however, check out the links below for more instruments
-          and songs.</p>
+          <p>The latest version is just below! It includes an instrument starter pack and a few sample songs. If you haven't used pxtone before however, check out the resources farther down for more instruments and songs.</p>
+          <p>Also check out <a href="./guide.html">here</a> for a getting-started guide, hosting a server, etc.</p>
         </div>
         <div class="download-list">
           <div>
@@ -84,11 +82,10 @@
             </a>
           </div>
         </div>
-        <p class="text">For other operating systems, there are build instructions in the <a href="https://github.com/yuxshao/ptcollab">source repo</a>. You can also find older releases <a href="https://github.com/yuxshao/ptcollab/releases">here</a>!</p>
-        <h3>Guides & Help</h3>
+        <h3>Questions & contributing</h3>
         <div class="text">
-          <p>See <a href="./guide.html">here</a> for documentation, including guides for getting started, hosting a server, and various other common actions.</p>
-          <p>If you have any questions, comments, or suggestions, please feel free to contact me there, <a href="mailto:yuxshaos[replace-this-with-an-at-sign]gmail.com">by email</a>, or in Discord (server link below).</p>
+          <p>For other operating systems and older releases, check out the <a href="https://github.com/yuxshao/ptcollab">source repo</a>.</p>
+          <p>If you have any questions or suggestions, please feel free to contact me there, <a href="mailto:yuxshaos[replace-this-with-an-at-sign]gmail.com">by email</a>, or in Discord (server link below).</p>
         </div>
       </section>
 
