adjust a few things with midi

--- a/gh-pages/guide.html
+++ b/gh-pages/guide.html
@@ -121,7 +121,7 @@
             <li>Once something’s selected, you can use Up/Down to shift a parameter, or Ctrl+Up/Down to transpose.</li>
             <li>The hand tool can be accessed by Ctrl+click, instead of being a separate tool.</li>
             <li>Seeking is by Shift+click. To reset the playhead after playback, stop the song (ESC) instead of pausing (space).</li>
-            <li>There’s no unit view, but only a keyboard view (for now)</li>
+            <li>Instead of a unit view, you can <i>pin units</i> above the piano roll. See info about the unit tab below.</li>
             <li>More gestures and shortcuts for navigation and editing, described below.</li>
           </ul>
         </div>
@@ -263,8 +263,8 @@
           <p class="text">Go to Options &gt; Settings &gt; MIDI and select your midi device.</p>
           <img src="resources/midi-set-device.png" class="screenshot" alt="choosing midi device" />
           <p class="text">From here, there are two ways to input midi: live or with step controls.</p>
-          <p class="text">To record live, simply start the song and play notes to have them be recorded! If you're like me and not great at playing perfect rhythms, you might want to quantize your notes afterwards. The shortcuts list below describes how.</p>
-          <p class="text">To record with step controls, input notes while the song <em>isn't</em> playing, and use J/L to move back and forward in time by the current quantization.</p>
+          <p class="text">Press Ctrl+R to enable recording, then start the song and play your notes! If you're like me and not great at playing perfect rhythms, you might want to quantize your notes afterwards. The shortcuts list below describes how.</p>
+          <p class="text">To record with step controls, input notes while the song <em>isn't</em> playing, and use J/L to move back and forward in time by the current quantization. Make sure you're still in recording mode. </p>
           <div class="text">Here are some useful shortcuts:
           <ul>
             <li>Quantization: Select (see Copy and Paste section above), then Alt+Q.</li>
