vid about navigating around

--- a/gh-pages/guide.html
+++ b/gh-pages/guide.html
@@ -152,7 +152,7 @@
             <ol>
               <li>Visible. Toggle if the unit is visible in the background while you’re focused on a different unit.</li>
               <li>Playing. Toggle if the unit is playing or muted.</li>
-              <li>Pinned. Toggle if the unit is pinned to the top of the piano roll, so that you can edit its note timings even while another unit is focused (useful for drums). </li>
+              <li>Pinned. Toggle if the unit is pinned to the top of the piano roll, so that you can edit its note timings even while another unit is focused (useful for drums). Editing a pinned unit is similar to the regular piano roll - click to add notes, right-click to delete. </li>
               <li>Name. The name of the unit. Double-click to edit. Ctrl+click to select it for copy / paste. </li>
             </ol>
           </div>
@@ -222,6 +222,27 @@
             </ul>
             <p>If you have a local firewall (Windows firewall, Comodo, McAfee, F-secure, etc.), you need to configure that as well. For more detailed guides, check out <a href="https://portforward.com/router.htm">portforward.com</a> (you generally don't need to download anything).</p>
             <p>Once the server is up, others can connect to it by going to File &gt; Connect, and in the <a href="./resources/connect.png">Connect dialog</a>, type in your public IP (which you can find <a href="https://ipecho.net/">here</a>), then a colon, then the port you're hosting on.</p>
+          </div>
+        </div>
+
+        <a class="h3" href="#" onclick="toggle('how-navigate');return false">Navigate my project quickly?</a>
+        <div id="how-navigate" style="display:none">
+          <div class="text"><p>This may mean one of two things: moving to different times in the song, or to different units.</p>
+            <p>Jumping around to different times in the song usually involves the mouse. In particular:
+            <ul>
+              <li>Ctrl+scroll and Ctrl+shift+scroll to zoom in and out.</li>
+              <li>Middle-click drag to pan around.</li>
+            </ul>
+            <a href="resources/panning.mp4">Here's a video</a>.
+            </p>
+            <p>Jumping around to different units can be done with either the mouse or keyboard. Options:</p>
+            <ul>
+              <li>You can click on the units in the unit tab.</li>
+              <li>You can press W / S / PgUp / PgDn to go to the next / previous unit. </li>
+              <li>You can press 1..9 to jump to that numbered unit. </li>
+              <li>You can press R and click to jump to a pinned unit, or a unit in the background of the piano roll. </li>
+            </ul>
+            <a href="resources/jump-to-unit.mp4">Here's a video</a>.
           </div>
         </div>
 
